new view counter location test

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Cody Waits</h1>
+					<h1>Cody R. Waits</h1>
 					<p>IT & Cloud Professional</p>
+					
 					<img src="images/Black And White Minimal Instagram Profile Picture Transparent Background.png" width="300">
 				</header>
 				<div class="counter-number"></div>
+				
 				<div class="container">
 					<ul class="actions special">
 						<li><a href="#bio" class="button primary scrolly">About Me</a></li>
