changed ynamodb table to have lowercase views

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header class="major">
-					<h1>Cody R. Waits</h1>
+					<h1>Cody Waits</h1>
 					<p>IT & Cloud Professional</p>
 					
 					<img src="images/Black And White Minimal Instagram Profile Picture Transparent Background.png" width="300">
