added new background and email code

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		<!-- Bio -->
 			<section id="bio" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/pic01.jpg" alt="" /></span>
+					<span class="image fit primary"><img src="images/Blue Modern Technology Linktree Background.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Who I am</h2>
@@ -82,8 +82,8 @@
 							<h2>Skills</h2>
 						</header>
 						<h4>AWS</h4>
-						<p>EC2 | S3 | VPC | IAM | KMS | Route53 | DynamoDB | CloudTrail | Lambda</p>
-						<p>Python | Linux | Nmap | Wireshark | GitHub | Git | Active Directory</p>
+						<p>EC2 | S3 | VPC | IAM | KMS | Route53 | DynamoDB | CloudTrail | Lambda | ACM</p>
+						<p>Python | Linux | Nmap | Wireshark | GitHub | Git | HTML | Active Directory</p>
 					</div>
 					<a href="#Employment" class="goto-next scrolly">Next</a>
 				</div>
@@ -507,7 +507,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
-					<form method="post" action="#">
+					<form method="post" action="send_email.php">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
