altered sendemail function

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 		<!-- Skills -->
 			<section id="Skills" class="main special">
 				<div class="container">
-					<span class="image fit primary"><img src="images/skills.png" alt="" /></span>
+					<span class="image fit primary"><img src="images/Skills.png" alt="" /></span>
 					<div class="content">
 						<header class="major">
 							<h2>Skills</h2>
@@ -568,7 +568,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<header class="major">
 						<h2>Get in touch</h2>
 					</header>
-					<form onsubmit="sendEmail()">
+					<form onsubmit="return sendEmail()">
 						<div class="row gtr-uniform">
 							<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 							<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
