--- a/index.html
+++ b/index.html
@@ -11,45 +11,6 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-		<script>
-			function sendEmail() {
-			  // Get input values from the form
-			  var name = document.getElementById("name").value;
-			  var email = document.getElementById("email").value;
-			  var message = document.getElementById("message").value;
-		  
-			  // Prepare the request body
-			  var requestBody = {
-				name: name,
-				email: email,
-				message: message
-			  };
-		  
-			  // Make an HTTP POST request to the Lambda function
-			  fetch('https://affxsep1jg.execute-api.us-east-1.amazonaws.com/SES-send-email', {
-				method: 'POST',
-				body: JSON.stringify(requestBody)
-			  })
-			  .then(function(response) {
-				if (response.ok) {
-				  // Email sent successfully
-				  alert("Email sent successfully!");
-				  document.getElementById("name").value = "";
-				  document.getElementById("email").value = "";
-				  document.getElementById("message").value = "";
-				} else {
-				  // Error sending email
-				  alert("Failed to send email. Please try again later.");
-				}
-			  })
-			  .catch(function(error) {
-				// Error handling
-				console.error('Error:', error);
-				alert("An error occurred. Please try again later.");
-			  });
-			}
-		  </script>
 	</head>
 
 	<body class="is-preload">
@@ -594,6 +555,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 
 		<!-- Scripts -->
+			<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -602,6 +564,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 			<script src="assets/js/index.js"></script>
+			<script src="assets/js/email.js"></script>
 
 	</body>
 </html>
