--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
 				</ul>
 				<a href="#footer" class="goto-next scrolly">Next</a>
 			</div>
+			
 		</section>
 
 		<!--
@@ -528,6 +529,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<div class="container">
 					<header class="major">
 						<h2>Get in touch</h2>
+						<h2>(AWS SES integration pending!)</h2>
 					</header>
 					<form>
 						<div class="row gtr-uniform">
