Added Pentest Certification

--- a/index.html
+++ b/index.html
@@ -68,8 +68,12 @@
 								<img src="images/comptia-cysa-ce-certification.png" width ="200">
 							</li>
 							<li>
+								<img src="images/comptia-pentest-ce-certification.png" width ="200">
+							</li>
+							<li>
 								<img src="images/comptia-security-ce-certification.png" width ="200">
 							</li>
+							
 						</ul>
 					</div>
 					<a href="#Skills" class="goto-next scrolly">Next</a>
