Updating employment history and certification

--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
 							<li>
 								<img src="images/comptia-security-ce-certification.png" width ="200">
 							</li>
+							<li>
+								<img src="images/hashicorp-certified-vault-associate-002-2.png" width ="200">
+							</li>
 							
 						</ul>
 					</div>
@@ -107,10 +110,22 @@
 						<h2>Employment History</h2>
 					</header>
 					<header class="major">
+						<img src="images/lmi.jpg" width="150">
+						<h4>AWS CLOUD ENGINEER</h4>
+						<p>LMI</p>
+						<p>2024 - PRESENT</p>
+						<ul>
+							<li>Member of the platform team creating a PaaS solution within an AWS EKS environment for a DoD customer.</li>
+						</ul>
+					</header>
+					<hr />
+					
+					</header>
+					<header class="major">
 						<img src="images/160soar.png" width="150">
 						<h4>IT OPERATIONS MANAGER<br>(SPECIAL OPERATIONS)</h4>
 						<p>US ARMY - 3RD BATTALION, 160TH SPECIAL OPERATIONS AVIATION REGIMENT (AIRBORNE)</p>
-						<p>2021 - PRESENT</p>
+						<p>2021 - 2024</p>
 						<ul>
 							<li>Developed a solution to provide classified data services using a cross-organization network infrastructure to customers in an austere maritime environment which resulted in 100+ service members across the organization advancing their crew member qualifications</li>
 							<li>Maintained compliance with security practices on multiple networks up to the top secret level utilizing cryptographic encryption</li>
